@@ -1,5 +1,8 @@
 2007-12-16  Andreas Kirschbaum
 
+	* Add support for sound2 protocol command. Add sounds for player
+	death and magic bullet.
+
 	* Add sound support for more than one concurrent sound effect, and
 	for per-map background music.
 
